--- a/calanasan_exer2.css
+++ b/calanasan_exer2.css
@@ -12,10 +12,12 @@
 	display: grid;
 	place-items: center;
 	font-family: "Tan_Nimbus";
-	/* font-size: 75px; */
 	font-size: 6vw;
 	color:#0b1956;
 }
+
+/*=====================================================================================*/
+/*NAVBAR*/
 
 .nav_bar{
 	position: sticky;
@@ -54,34 +56,48 @@
     margin-right: auto;
 }
 
+/*=====================================================================================*/
+/*TITLE PAGE*/
+
 .title_heading{
 	display: grid;
 	grid-template-areas: "stack";
 	place-items: center;
+	min-height: 80vh;
+	width: 100%;
 	position: relative;
 }
 
 .portfolio_text{
 	grid-area: stack;
-	z-index: 1;
 	margin: 0;
+	z-index: 1;
+	position: relative;
+	top: -125px;
+}
+
+.icon_container{
+	grid-area: stack;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	/*width: 100vw;*/
+	width: 100%;
+	align-self: end; 
 }
 
 .person_icon{
-	display: inline-block;
-	position: relative;
-	bottom: -125px;
-	grid-area: stack;
-	height: 350px; 
-	z-index: 2;
+	height: 50vh;
+	width: auto;
+	margin-bottom: -10px;
 	transition: transform 0.3s ease; /*animation duration*/
+	z-index: 2;
 }
 
 .rectangle_bar{
 	width: 100%;
 	height: 150px;
 	background-color: #0b1956;
-	margin-top: -60px;
 	z-index: 3;
 }
 
